Closed
Bug 1789535
Opened 3 years ago
Closed 3 years ago
Intermittent LeakSanitizer | leak at mozilla::storage::Service::OpenDatabase, mozilla::dom::fs::data::, mozilla::dom::fs::data::FileSystemDataManager::BeginOpen, InvokeMethod
Categories
(Core :: DOM: Core & HTML, defect, P5)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
107 Branch
| Tracking | Status | |
|---|---|---|
| firefox107 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jari)
References
(Blocks 1 open bug)
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=389659647&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/VJdPL81HTuqLoHp3E8Wklw/runs/0/artifacts/public/logs/live_backing.log
[task 2022-09-06T22:05:53.654Z] 22:05:53 INFO - TEST-START | dom/fs/test/mochitest/test_basics_worker.html
[task 2022-09-06T22:05:54.345Z] 22:05:54 INFO - GECKO(3692) | MEMORY STAT | vsize 20974520MB | residentFast 448MB
[task 2022-09-06T22:05:54.361Z] 22:05:54 INFO - TEST-OK | dom/fs/test/mochitest/test_basics_worker.html | took 707ms
[task 2022-09-06T22:05:54.477Z] 22:05:54 INFO - TEST-START | Shutdown
[task 2022-09-06T22:05:54.481Z] 22:05:54 INFO - Passed: 40
[task 2022-09-06T22:05:54.502Z] 22:05:54 INFO - Failed: 0
[task 2022-09-06T22:05:54.506Z] 22:05:54 INFO - Todo: 0
[task 2022-09-06T22:05:54.510Z] 22:05:54 INFO - Mode: e10s
[task 2022-09-06T22:05:54.511Z] 22:05:54 INFO - Slowest: 1819ms - /tests/dom/fs/test/mochitest/test_basics.html
[task 2022-09-06T22:05:54.516Z] 22:05:54 INFO - SimpleTest FINISHED
[task 2022-09-06T22:05:54.518Z] 22:05:54 INFO - TEST-INFO | Ran 1 Loops
[task 2022-09-06T22:05:54.519Z] 22:05:54 INFO - SimpleTest FINISHED
[task 2022-09-06T22:05:54.577Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f16380 - BlockShutdown: NotifyImpendingShutdown.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3627
[task 2022-09-06T22:05:54.578Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f16380 - BlockShutdown: RequestContentJSInterrupt.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3633
[task 2022-09-06T22:05:54.579Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000ffa580 - BlockShutdown: NotifyImpendingShutdown.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3627
[task 2022-09-06T22:05:54.579Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000ffa580 - BlockShutdown: RequestContentJSInterrupt.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3633
[task 2022-09-06T22:05:54.579Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=6190011d8280 - BlockShutdown: NotifyImpendingShutdown.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3627
[task 2022-09-06T22:05:54.579Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=6190011d8280 - BlockShutdown: RequestContentJSInterrupt.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3633
[task 2022-09-06T22:05:54.579Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f6a480 - BlockShutdown: NotifyImpendingShutdown.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3627
[task 2022-09-06T22:05:54.580Z] 22:05:54 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f6a480 - BlockShutdown: RequestContentJSInterrupt.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3633
[task 2022-09-06T22:05:54.850Z] 22:05:54 INFO - GECKO(3692) | JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 576: NotFoundError: No such JSWindowActor 'SpecialPowers'
[task 2022-09-06T22:05:54.883Z] 22:05:54 INFO - GECKO(3692) | JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 576: NotFoundError: No such JSWindowActor 'AppTestDelegate'
[task 2022-09-06T22:05:54.885Z] 22:05:54 INFO - GECKO(3692) | JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 576: NotFoundError: No such JSWindowActor 'AppTestDelegate'
[task 2022-09-06T22:05:54.943Z] 22:05:54 INFO - GECKO(3692) | 1662501954941 Marionette TRACE Received observer notification quit-application
[task 2022-09-06T22:05:54.946Z] 22:05:54 INFO - GECKO(3692) | 1662501954944 Marionette INFO Stopped listening on port 2828
[task 2022-09-06T22:05:54.949Z] 22:05:54 INFO - GECKO(3692) | 1662501954948 Marionette DEBUG Marionette stopped listening
[task 2022-09-06T22:05:55.379Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=6190011d8280 - BlockShutdown: CanSend.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3672
[task 2022-09-06T22:05:55.383Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=6190011d8280 - ShutDownProcess: Sent shutdown message.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1804
[task 2022-09-06T22:05:55.394Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f6a480 - BlockShutdown: CanSend.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3672
[task 2022-09-06T22:05:55.398Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f6a480 - ShutDownProcess: Sent shutdown message.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1804
[task 2022-09-06T22:05:55.435Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=6190011d8280 - ShutDownProcess: Closing channel.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1844
[task 2022-09-06T22:05:55.437Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=6190011d8280 - RemoveShutdownBlockers: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3787
[task 2022-09-06T22:05:55.440Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f6a480 - ShutDownProcess: Closing channel.: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1844
[task 2022-09-06T22:05:55.444Z] 22:05:55 INFO - GECKO(3692) | [Parent 3692, Main Thread] WARNING: ContentParent: id=619000f6a480 - RemoveShutdownBlockers: file /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:3787
[task 2022-09-06T22:05:55.872Z] 22:05:55 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:55.872Z] 22:05:55 INFO - GECKO(3692) | Suppressions used:
[task 2022-09-06T22:05:55.872Z] 22:05:55 INFO - GECKO(3692) | count bytes template
[task 2022-09-06T22:05:55.873Z] 22:05:55 INFO - GECKO(3692) | 2 288 libfontconfig.so
[task 2022-09-06T22:05:55.873Z] 22:05:55 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:55.900Z] 22:05:55 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:55.900Z] 22:05:55 INFO - GECKO(3692) | Suppressions used:
[task 2022-09-06T22:05:55.900Z] 22:05:55 INFO - GECKO(3692) | count bytes template
[task 2022-09-06T22:05:55.900Z] 22:05:55 INFO - GECKO(3692) | 2 288 libfontconfig.so
[task 2022-09-06T22:05:55.900Z] 22:05:55 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:55.944Z] 22:05:55 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:55.944Z] 22:05:55 INFO - GECKO(3692) | Suppressions used:
[task 2022-09-06T22:05:55.944Z] 22:05:55 INFO - GECKO(3692) | count bytes template
[task 2022-09-06T22:05:55.944Z] 22:05:55 INFO - GECKO(3692) | 2 288 libfontconfig.so
[task 2022-09-06T22:05:55.944Z] 22:05:55 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:56.128Z] 22:05:56 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:56.128Z] 22:05:56 INFO - GECKO(3692) | Suppressions used:
[task 2022-09-06T22:05:56.128Z] 22:05:56 INFO - GECKO(3692) | count bytes template
[task 2022-09-06T22:05:56.128Z] 22:05:56 INFO - GECKO(3692) | 2 288 libfontconfig.so
[task 2022-09-06T22:05:56.129Z] 22:05:56 INFO - GECKO(3692) | -----------------------------------------------------
[task 2022-09-06T22:05:58.756Z] 22:05:58 INFO - GECKO(3692) | =================================================================
[task 2022-09-06T22:05:58.758Z] 22:05:58 ERROR - GECKO(3692) | ==3692==ERROR: LeakSanitizer: detected memory leaks
[task 2022-09-06T22:05:58.758Z] 22:05:58 INFO - GECKO(3692) | Direct leak of 72 byte(s) in 1 object(s) allocated from:
[task 2022-09-06T22:05:58.760Z] 22:05:58 INFO - GECKO(3692) | #0 0x562475e9f19e in malloc /builds/worker/fetches/llvm-project/compiler-rt/lib/asan/asan_malloc_linux.cpp:69:3
[task 2022-09-06T22:05:58.760Z] 22:05:58 INFO - GECKO(3692) | #1 0x562475ee3cb5 in moz_xmalloc /builds/worker/checkouts/gecko/memory/mozalloc/mozalloc.cpp:52:15
[task 2022-09-06T22:05:58.761Z] 22:05:58 INFO - GECKO(3692) | #2 0x7f5b00f51635 in operator new /builds/worker/workspace/obj-build/dist/include/mozilla/cxxalloc.h:33:10
[task 2022-09-06T22:05:58.766Z] 22:05:58 INFO - GECKO(3692) | #3 0x7f5b00f51635 in NewRunnableMethod<mozilla::storage::Connection *, nsresult (mozilla::storage::Connection::*)()> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:1413:20
[task 2022-09-06T22:05:58.766Z] 22:05:58 INFO - GECKO(3692) | #4 0x7f5b00f51635 in mozilla::storage::Connection::Release() /builds/worker/checkouts/gecko/storage/mozStorageConnection.cpp:504:13
[task 2022-09-06T22:05:58.767Z] 22:05:58 INFO - GECKO(3692) | #5 0x7f5b04dd42ed in mozilla::dom::fs::data::FileSystemDatabaseManagerVersion001::~FileSystemDatabaseManagerVersion001() /builds/worker/checkouts/gecko/dom/fs/parent/datamodel/FileSystemDatabaseManagerVersion001.h:68:58
[task 2022-09-06T22:05:58.767Z] 22:05:58 INFO - GECKO(3692) | #6 0x7f5b04de3b44 in operator() /builds/worker/workspace/obj-build/dist/include/mozilla/UniquePtr.h:459:5
[task 2022-09-06T22:05:58.773Z] 22:05:58 INFO - GECKO(3692) | #7 0x7f5b04de3b44 in reset /builds/worker/workspace/obj-build/dist/include/mozilla/UniquePtr.h:301:7
[task 2022-09-06T22:05:58.773Z] 22:05:58 INFO - GECKO(3692) | #8 0x7f5b04de3b44 in operator= /builds/worker/workspace/obj-build/dist/include/mozilla/UniquePtr.h:271:5
[task 2022-09-06T22:05:58.773Z] 22:05:58 INFO - GECKO(3692) | #9 0x7f5b04de3b44 in operator() /builds/worker/checkouts/gecko/dom/fs/parent/datamodel/FileSystemDataManager.cpp:520:40
[task 2022-09-06T22:05:58.774Z] 22:05:58 INFO - GECKO(3692) | #10 0x7f5b04de3b44 in mozilla::detail::ProxyFunctionRunnable<mozilla::dom::fs::data::FileSystemDataManager::BeginClose()::$_10, mozilla::MozPromise<bool, nsresult, false> >::Run() /builds/worker/workspace/obj-build/dist/include/mozilla/MozPromise.h:1645:29
[task 2022-09-06T22:05:58.774Z] 22:05:58 INFO - GECKO(3692) | #11 0x7f5aff59b1b6 in mozilla::TaskQueue::Runner::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskQueue.cpp:259:20
[task 2022-09-06T22:05:58.775Z] 22:05:58 INFO - GECKO(3692) | #12 0x7f5aff5c60b2 in nsThreadPool::Run() /builds/worker/checkouts/gecko/xpcom/threads/nsThreadPool.cpp:310:14
[task 2022-09-06T22:05:58.775Z] 22:05:58 INFO - GECKO(3692) | #13 0x7f5aff5b896e in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1199:16
[task 2022-09-06T22:05:58.775Z] 22:05:58 INFO - GECKO(3692) | #14 0x7f5aff5c25c4 in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:465:10
[task 2022-09-06T22:05:58.776Z] 22:05:58 INFO - GECKO(3692) | #15 0x7f5b00bc2d78 in mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:300:20
[task 2022-09-06T22:05:58.780Z] 22:05:58 INFO - GECKO(3692) | #16 0x7f5b00a5ea01 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:381:10
[task 2022-09-06T22:05:58.782Z] 22:05:58 INFO - GECKO(3692) | #17 0x7f5b00a5ea01 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:374:3
[task 2022-09-06T22:05:58.783Z] 22:05:58 INFO - GECKO(3692) | #18 0x7f5b00a5ea01 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:356:3
[task 2022-09-06T22:05:58.784Z] 22:05:58 INFO - GECKO(3692) | #19 0x7f5aff5afac4 in nsThread::ThreadFunc(void*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:384:10
[task 2022-09-06T22:05:58.785Z] 22:05:58 INFO - GECKO(3692) | #20 0x7f5b27a83c0e in _pt_root /builds/worker/checkouts/gecko/nsprpub/pr/src/pthreads/ptthread.c:201:5
[task 2022-09-06T22:05:58.786Z] 22:05:58 INFO - GECKO(3692) | #21 0x7f5b277b66da in start_thread /tmp/glibc/nptl/pthread_create.c:463
Comment 2•3 years ago
|
||
Looks like it's a runnable created in closing the connection from ~FileSystemDataManagerVersion001()
Comment 3•3 years ago
•
|
||
I suspect this is related to the fact that mozStorageConnection expects to be opened and closed on the same thread. In our case the connection is opened and closed using the same task queue, but the task queue is backed by a thread pool, so it can happen that the open and close operations occur on different threads.
Comment 4•3 years ago
|
||
See bug 1121282.
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 6•3 years ago
|
||
In fact, there are many other leaks in the log.
Assignee: nobody → jjalkanen
Flags: needinfo?(jjalkanen)
| Assignee | ||
Comment 7•3 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Pushed by jjalkanen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/37785ba4938c
Close FileSystemDatabaseManager manually. r=dom-storage-reviewers,janv
Comment 10•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox107:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•