Bug 1789535 - Close FileSystemDatabaseManager manually. r=dom-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D157222